# UBB-CS-Bachelors-Materials

./: .gitattributes  .gitignore  README.md
Sem 1/Algebra/Exams/: Algebra exam 1 1  Algebra exam 1 2  Algebra exam 1 3  Algebra exam 1 4  Algebra exam 2 1  Algebra exam 2 2  Algebra exam 2 3  Algebra exam 2 4  Algebra exam 2 5
Sem 1/Algebra/Notes/: Algebra final.notewise
Sem 1/Analiza Matematica/Finals2026/: Analisys R5
Sem 1/Analiza Matematica/Notes/: Analiza matematica final.notewise
Sem 1/Analiza Matematica/Python/: Taylor polinomials.ipynb
Sem 1/CSA/Exams/: ASC 1  ASC 10  ASC 2  ASC 3  ASC 4  ASC 5  ASC 6  ASC 7  ASC 8  ASC 9
Sem 1/CSA/Notes/: Arhitectura sistemelor de calcul final.notewise
Sem 1/CSA/seminars/: Seminar6.docx
Sem 1/Computational Logic/Exam/: Exam-Computational_Logic-Subjects.doc  IE_Computational_Logic - Exam_2025-2026.docx  Models_subjects_exam_Computational-Logic.doc
Sem 1/Computational Logic/Exams/: Logic 10  Logic 10(1)  Logic 11  Logic 14a  Logic 18  Logic 18b  Logic 20  Logic 3a  Logic 3a(1)  Logic 3b  Logic 5b  Logic 6  Logic 7a  Logic 9  Logic 9(1)
Sem 1/Computational Logic/Lectures/: IE_Overview_Computational Logic.pptx  Lecture0.docx  Lecture10_Boolean functions_2025-2026.pptx  Lecture11_Veitch-Karnaugh_method_2025-2026.pptx  Lecture12_Quine_Moisil_methods_2025-2026.pptx  Lecture1_2025-2026.pptx  Lecture2_2025-2026.pptx  Lecture3_Propositional_logic_2025-2026.pptx  Lecture4_Propositional_logic_2025-2026.pptx  (+6 more)
Sem 2/DSA/assignments/SortedMultiMap/: CMakeLists.txt  SMMIterator.cpp  SMMIterator.h  SortedMultiMap.cpp  SortedMultiMap.h
Sem 2/DSA/assignments/SortedMultiMap/Utilities/: dynamicarray.h  dynamicarray.tpp
Sem 2/DSA/assignments/SortedSet/: CMakeLists.txt  SortedSet.cpp  SortedSet.h  SortedSetIterator.cpp  SortedSetIterator.h
Sem 2/OOP/assignments/a10-daristyle-1/: CMakeLists.txt
Sem 2/OOP/assignments/a10-daristyle-1/src/: main.cpp
Sem 2/OOP/assignments/a10-daristyle-1/src/Domain/: Operation.h  OperationAdd.cpp  OperationAdd.h  OperationRemove.cpp  OperationRemove.h  OperationUpdate.cpp  OperationUpdate.h  Tutorial.h
Sem 2/OOP/assignments/a10-daristyle-1/src/Repository/: CSVFileRepository.cpp  CSVFileRepository.h  HTMLFileRepository.cpp  SQLiteRepository.cpp  SQLiteRepository.h  TextFileRepository.cpp
Sem 2/OOP/assignments/a10-daristyle-1/src/Service/: Service.cpp  Service.h
Sem 2/OOP/assignments/a10-daristyle-1/src/Tests/: Tests.cpp
Sem 2/OOP/assignments/a10-daristyle-1/src/UI/: GUI2.cpp  GUI2.h  GUI2.ui  TutorialTabelModel.cpp  TutorialTabelModel.h
Sem 2/OOP/assignments/a10-daristyle-1/src/Utilities/: vector.h  vector.tpp
Sem 2/OOP/assignments/a10-daristyle-1/src/Validator/: TutorialValidator.cpp
Sem 2/OOP/assignments/a6-7-daristyle/: CMakeLists.txt  README.md
Sem 2/OOP/assignments/a6-7-daristyle/src/: main.cpp
Sem 2/OOP/assignments/a6-7-daristyle/src/Repository/: CSVFileRepository.cpp  FileRepository.h  SQLiteRepository.cpp
Sem 2/OOP/assignments/a6-7-daristyle/src/Service/: Service.cpp  Service.h
Sem 2/OOP/assignments/a6-7-daristyle/src/UI/: UI.cpp  UI.h
Sem 2/OOP/assignments/a6-7-daristyle/src/Validator/: TutorialValidator.cpp  TutorialValidator.h
Sem 2/OOP/examPractice/StarCatalogue3/: CMakeLists.txt
Sem 2/OOP/examPractice/StarCatalogue3/src/: main.cpp
Sem 2/OOP/examPractice/StarCatalogue3/src/Domain/: Astronomer.cpp  Astronomer.h  Star.cpp  Star.h
Sem 2/OOP/examPractice/StarCatalogue3/src/Repository/: AstronomerRepository.cpp  AstronomerRepository.h  StarRepository.cpp  StarRepository.h
Sem 2/OOP/examPractice/StarCatalogue3/src/Service/: Service.cpp  Service.h
Sem 2/OOP/examPractice/StarCatalogue3/src/UI/: GUI.cpp  GUI.h  GUI.ui  TableModel.cpp  TableModel.h
Sem 2/OOP/seminar/seminar3/: CMakeLists.txt
Sem 2/OOP/seminar/seminar3/Seminar3_Week1_stub/: Seminar3_stub.sln
Sem 2/OOP/seminar/seminar3/Seminar3_Week1_stub/Seminar3_stub/: Controller.cpp  Controller.h  DynamicVector.h  PlayList.cpp  PlayList.h  Repository.cpp  Repository.h  Seminar3_stub.vcxproj  Seminar3_stub.vcxproj.filters  Song.cpp  Tests.cpp  UI.cpp  main.cpp
Sem 2/OOP/seminar/seminar5/Playlist - polymoprhic undo - stub/Playlist/: Action.h  ActionAdd.cpp  ActionAdd.h  ActionRemove.cpp  ActionRemove.h  ActionUpdate.cpp  ActionUpdate.h  CMakeLists.txt  CSVPlaylist.cpp  Repository.cpp  Service.cpp  Service.h  Song.cpp  UI.cpp  UI.h  Utils.cpp  Utils.h  Utils.tpp  main.cpp
Sem 2/OOP/test1Practice/: CMakeLists.txt
Sem 2/OOP/test1Practice/src/: main.cpp
Sem 2/OOP/test1Practice/src/Domain/: Car.cpp  Car.h
Sem 2/OOP/test1Practice/src/Repository/: Repository.cpp  Repository.h
Sem 2/OOP/test1Practice/src/Service/: Service.cpp  Service.h
Sem 2/OOP/test1Practice/src/UI/: UI.cpp  UI.h
Sem 2/OOP/test2Practice/: CMakeLists.txt
Sem 2/OOP/test2Practice/src/: main.cpp
Sem 2/OOP/test2Practice/src/Domain/: Bill.cpp  Bill.h
Sem 2/OOP/test2Practice/src/Repository/: Repository.cpp  Repository.h
Sem 2/OOP/test2Practice/src/Service/: Service.cpp  Service.h
Sem 2/OOP/test2Practice/src/UI/: GUI.cpp  GUI.h  GUI.ui
Sem 2/OOP/tests/practicalexam-911-912-daristyle/: CMakeLists.txt
Sem 2/OOP/tests/practicalexam-911-912-daristyle/src/: main.cpp
Sem 2/OOP/tests/practicalexam-911-912-daristyle/src/Domain/: Idea.cpp  Idea.h  Researcher.cpp  Researcher.h
Sem 2/OOP/tests/practicalexam-911-912-daristyle/src/Repository/: IdeaRepository.cpp  IdeaRepository.h  ResercherRepository.cpp  ResercherRepository.h
Sem 2/OOP/tests/practicalexam-911-912-daristyle/src/Service/: Service.cpp  Service.h
Sem 2/OOP/tests/practicalexam-911-912-daristyle/src/UI/: DeveloperGUI.cpp  DeveloperGUI.h  DeveloperGUI.ui  GUI.cpp  GUI.h  GUI.ui  TabelModel.cpp  TabelModel.h
Sem 2/OOP/tests/t3-daristyle/: CMakeLists.txt
Sem 2/OOP/tests/t3-daristyle/src/: main.cpp
Sem 2/OOP/tests/t3-daristyle/src/Domain/: Flight.cpp  Flight.h
Sem 2/OOP/tests/t3-daristyle/src/Repository/: Repository.cpp  Repository.h
Sem 2/OOP/tests/t3-daristyle/src/Service/: Service.cpp  Service.h
Sem 2/OOP/tests/t3-daristyle/src/UI/: GUI.cpp  GUI.h  GUI.ui
(+446 files in other folders)
